
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-2 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Update xPDO to revision 424 for fixes related to PDOException reporting
- Ensure packages are unpacked after downloading
- Fixed bug with removing a plugin
- Added System Setting, 'cache_noncore_lexicon_topics', which can be used to disable caching on noncore lexicon topics, which is useful for 3PC development.
- Deprecated modPackageBuilder::buildLexicon
- Completely refactored the Lexicon system to now do file-based Lexicon Entries only. DB entries are only for overrides. This allows for proper overriding of
core lexicon entries, caches faster, and allows for much easier 3PC development.
- [#MODX-1783] Fixed unnecessary scrollbar bug by removing unnecessary margin on body/html tags
- Slight spacing tweaks to main layout to make layout feel more open
- [#MODX-1806] Improvements to messages section
- [#MODX-1913] Fixed incorrect wording on setup complete page
- Tweaked launching of layout panel to add consistency across browsers
- [#MODX-1835] Fixed error on Windows platforms when an extension_packages path contains a colon (:)
- Added ORM editing formpanel object for editing v/p editing pairs, used now on modUser remote data form
- Added panel for viewing remote data on a user
- Added 'lexicon' field to modAccessPolicy to enable translations of descriptions of Permissions
- Added extended field to modUserProfile to handle a majority of basic extended user profile storage/retrieval needs
- Added 'lexicon' field to Element properties to enable automatic translating of property descriptions and option names
- Fixed parent/context_key reference issue when creating resource from context tree node